# qc_playground

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bombanitio/: __init__.py  create_basis.py  dens_to_cube.py  eval_dipole.py  eval_four.py  eval_kin.py  eval_nuc.py  eval_over.py  main_bombanitio.py  mom_exp.py  read_xyz.py  scf.py
bombanitio/data/: coord_xxx_01.xyz  coord_xxx_03.xyz  dens_xxx_02  dens_xxx_03  h_xxx_03  orca_dens_eq
bombanitio/special/: command  special.f
bombanitio/toolbox/: CubeFileTools.py  constants.py  cube.py  lib_dme.py
data/: coord_xxx_02.xyz  dens_xxx_01  fock.data  fock_xxx_01  fock_xxx_02  fock_xxx_03  h_xxx_01  orca_fock_eq
example/: coord.xyz
test/: conftest.py  test_basisset.py  test_coord.xyz  test_integral.py  test_orca.py  test_scf.py  test_xxx_01.py  test_xxx_02.py  test_xxx_03.py
