[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bombanitio"
author = "Christian Dressler"
author-email = "ch.dressler@outlook.de"

[tool.flit.scripts]
bombanitio = "bombanitio.main_bombanitio:main"
moment_expansion = "bombanitio.mom_exp:main"
write_to_cube = "bombanitio.dens_to_cube:dens_to_cube"
